# ChangeLog for media-video/ffmpeg
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-video/ffmpeg/ChangeLog,v 1.776 2014/08/07 19:14:39 jer Exp $

  07 Aug 2014; Jeroen Roovers <jer@gentoo.org> ffmpeg-1.2.6-r1.ebuild:
  Stable for HPPA (bug #512012).

*ffmpeg-2.3.1 (31 Jul 2014)

  31 Jul 2014; Alexis Ballier <aballier@gentoo.org> +ffmpeg-2.3.1.ebuild:
  version bump

  28 Jul 2014; Agostino Sarubbo <ago@gentoo.org> ffmpeg-1.2.6-r1.ebuild:
  Stable for ppc, wrt bug #512012

  27 Jul 2014; Markus Meier <maekke@gentoo.org> ffmpeg-2.2.5.ebuild,
  ffmpeg-2.3.ebuild:
  add ~arm, bug #510340

  27 Jul 2014; Samuli Suominen <ssuominen@gentoo.org> ffmpeg-2.3.ebuild,
  ffmpeg-9999.ebuild:
  Update media-libs/x265 dependency from 1.0 to 1.2 wrt #518320 by "darkbasic"

*ffmpeg-2.3 (27 Jul 2014)

  27 Jul 2014; Alexis Ballier <aballier@gentoo.org> +ffmpeg-2.3.ebuild:
  version bump

  27 Jul 2014; Alexis Ballier <aballier@gentoo.org> ffmpeg-9999.ebuild,
  metadata.xml:
  add xop useflag

  27 Jul 2014; Alexis Ballier <aballier@gentoo.org> ffmpeg-9999.ebuild:
  add samba useflag

  27 Jul 2014; Alexis Ballier <aballier@gentoo.org> ffmpeg-9999.ebuild:
  release notes is at the root of the repo, not under doc/

  27 Jul 2014; Alexis Ballier <aballier@gentoo.org> ffmpeg-9999.ebuild:
  enable quvi in multilib mode too

  27 Jul 2014; Alexis Ballier <aballier@gentoo.org> ffmpeg-9999.ebuild,
  metadata.xml:
  add fribidi useflag

  27 Jul 2014; Alexis Ballier <aballier@gentoo.org> ffmpeg-9999.ebuild,
  metadata.xml:
  add bs2b useflag

  27 Jul 2014; Alexis Ballier <aballier@gentoo.org> ffmpeg-9999.ebuild:
  handle existing release notes, bug #515118

  27 Jul 2014; Alexis Ballier <aballier@gentoo.org> -ffmpeg-0.10.12.ebuild,
  -ffmpeg-0.10.13.ebuild, -ffmpeg-2.2.2.ebuild, -ffmpeg-2.2.3.ebuild,
  -ffmpeg-2.2.3-r1.ebuild, -ffmpeg-2.2.4.ebuild:
  remove old

*ffmpeg-1.0.10 (27 Jul 2014)
