@@ -1,6 +1,13 @@
 # ChangeLog for media-video/ffmpeg
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-video/ffmpeg/ChangeLog,v 1.776 2014/08/07 19:14:39 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-video/ffmpeg/ChangeLog,v 1.777 2014/08/10 20:58:53 slyfox Exp $
+
+  10 Aug 2014; Sergei Trofimovich <slyfox@gentoo.org> ffmpeg-0.10.14.ebuild,
+  ffmpeg-1.0.10.ebuild, ffmpeg-1.0.8.ebuild, ffmpeg-1.0.9.ebuild,
+  ffmpeg-1.2.6-r1.ebuild, ffmpeg-1.2.6.ebuild, ffmpeg-1.2.7.ebuild,
+  ffmpeg-2.2.5.ebuild, ffmpeg-2.3.1.ebuild, ffmpeg-2.3.ebuild,
+  ffmpeg-9999.ebuild:
+  QA: drop trailing '.' from DESCRIPTION
 
   07 Aug 2014; Jeroen Roovers <jer@gentoo.org> ffmpeg-1.2.6-r1.ebuild:
   Stable for HPPA (bug #512012).
